Use default system font

--- a/_includes/inline.scss
+++ b/_includes/inline.scss
@@ -1,9 +1,20 @@
 @charset "utf-8";
 
-
-
 // Our variables
-$base-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$base-font-family:
+  // Safari for OS X and iOS (San Francisco)
+  -apple-system,
+  // Chrome >= 56 for OS X (San Francisco), Windows, Linux and Android
+  system-ui,
+  // Chrome < 56 for OS X (San Francisco)
+  BlinkMacSystemFont,
+  // Windows
+  "Segoe UI",
+  // Android
+  "Roboto",
+  // Basic web fallback
+  "Helvetica Neue", Arial, sans-serif !default;
+
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.6;
