--- a/_includes/list-article.html
+++ b/_includes/list-article.html
@@ -1,52 +1,34 @@
-<li itemprop="BlogPosting" itemscope itemtype="http://schema.org/BlogPosting">
+<li itemprop="BlogPosting" itemscope itemtype="http://schema.org/BlogPosting" class="list-article">
   <div itemprop="author" itemscope itemtype="http://schema.org/Person">
     <meta content="{{ site.author }}" itemprop="name" />
     <meta content="{{ site.my_face | prepend: site.url }}" itemprop="image" />
   </div>
 
-  {% assign post_image = site.logo %}
-
-  {% if post.image %}
-    <img src="{{ post.image.src }}" alt="{{ post.image.alt }}" />
-    {% assign post_image = post.image.src %}
-  {% else %}
-
-    {% assign foundImage = 0 %}
-    {% assign images = post.content | split:"<img " %}
-
-    {% for image in images %}
-      {% if image contains 'src' %}
-          {% if foundImage == 0 %}
-              {% assign html = image | split:"/>" | first %}
-              {% assign tags = html | split:" " %}
-              {% for tag in tags %}
-                {% if tag contains 'src' %}
-                  <img {{ tag }} />
-                  {% assign post_image = tag %}
-                {% endif %}
-              {% endfor %}
-              {% assign foundImage = 1 %}
-          {% else %}
-            {% break %}
-          {% endif %}
-      {% endif %}
-    {% endfor %}
-
-  {% endif %}
-
-  <meta itemprop="image" content="{{ post_image | prepend: site.url }}" />
-
-  <span class="post-meta" itemprop="datePublished">{{ post.date | date: "%b %-d, %Y" }}</span>
-  {% for tag in post.tags %}
-    <code class="post-meta"><a href="/tags#{{ tag | slugify }}-ref">{{ tag }}</a></code>
-  {% endfor %}
+  <span class="post-meta" itemprop="datePublished">{{ post.date | date: "%A, %-d %B %Y" }}</span>
 
   {% if post.custom_url %}
     {% assign url = post.custom_url %}
   {% else %}
     {% assign url = post.url %}
   {% endif %}
-  <h3><a itemprop="name" class="post-link" href="{{ url }}"><span itemprop="headline">{{ post.title }}</span></a></h3>
 
-  <span itemprop="description">{{ post.excerpt | strip_html | truncate: include.chars-max }}</span>
+  <h3>
+    <span itemprop="headline">
+      <a itemprop="name" class="post-link" href="{{ url }}">{{ post.title }}</a> {% if post.custom_url %}<a href="{{ post.url }}">★</a>{% endif %}
+    </span>
+  </h3>
+
+
+  {% if include.type != "full" %}
+    {% assign content = post.excerpt | strip_html | truncate: 300 %}
+  {% else %}
+    {% assign content = post.content %}
+  {% endif %}
+
+  <span itemprop="description">
+    {{ content }}
+    {% if include.type != "full" %}
+      <a href="{{ url }}">»</a>
+    {% endif %}
+  </span>
 </li>
