--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,12 +4,9 @@
     <nav class="site-nav">
       <div class="trigger">
           <a class="page-link" href="/">🏠 Home</a>
-          <a class="page-link" href="/about">🤓 About</a>
-          {% for page in site.pages %}
-            {% if page.title %}
-            <a class="page-link" href="{{ page.url | prepend: site.url }}">{{ page.title }}</a>
-            {% endif %}
-          {% endfor %}
+          <a class="page-link" href="/about.html">🤓 About</a>
+          <a class="page-link" href="/open-source.html">💼 Open Source</a>
+          <a class="page-link" href="/tags.html">🏷 Tags</a>
       </div>
     </nav>
   </div>
@@ -18,7 +15,7 @@
   <div class="profile">
       <section class="wrapper">
           <div id="header">
-              <img id="avatar" src="/assets/alex_palcuie.png" alt="{{ site.author }}">
+              <img id="avatar" src="/assets/alex_palcuie.jpg" alt="{{ site.author }}">
               <h1>Alex Palcuie</h1>
           </div>
       </section>
