Reorder front page and make it consistent

--- a/_includes/inline.scss
+++ b/_includes/inline.scss
@@ -53,7 +53,7 @@ $on-laptop:        800px;
 
 
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import "base", "layout";
+@import "base", "layout", "utilities";
 
 {% if page.url != "/" %}
 @import "syntax-highlighting", "layout-post";
