--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -147,7 +147,7 @@
     list-style: none;
 
     > li {
-        margin-bottom: $spacing-unit / 2;
+        margin-bottom: $spacing-unit * 2;
         clear: both;
 
         code {
@@ -214,8 +214,8 @@
     }
 
     hr {
-        margin-bottom: $spacing-unit / 2;
-        margin-top: $spacing-unit / 2;
+        margin-bottom: $spacing-unit * 2;
+        margin-top: $spacing-unit * 2;
         border-style: solid;
         border-color: $grey-color-dark;
         border-width: inherit;
