--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,12 @@ layout: default
 ---
 <div class="post">
   <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+    {% if page.custom_url %}
+      <h1 class="post-title"><a href="{{ page.custom_url }}">{{ page.title }}</a></h1>
+    {% else %}
+      <h1 class="post-title">{{ page.title }}</h1>
+    {% endif %}
+
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }} | {{ page.content | number_of_words }} words |
       {% for tag in page.tags %}
         <code class="post-meta"><a href="/tags#{{ tag | slugify }}-ref">{{ tag }}</a></code>
