Remove emoticons because they don't look good on Linux

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,10 +3,10 @@
   <div class="wrapper">
     <nav class="site-nav">
       <div class="trigger">
-          <a class="page-link" href="/">🏠 Home</a>
-          <a class="page-link" href="/about.html">🤓 About</a>
-          <a class="page-link" href="/open-source.html">💼 Open Source</a>
-          <a class="page-link" href="/tags.html">🏷 Tags</a>
+          <a class="page-link" href="/">Home</a>
+          <a class="page-link" href="/about.html">About</a>
+          <a class="page-link" href="/open-source/">Open Source</a>
+          <a class="page-link" href="/tags.html">Tags</a>
       </div>
     </nav>
   </div>
